--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="push">
           <label for="details">What's up?</label>
-          <textarea id="details" required></textarea>
+          <textarea id="details" name="message" required></textarea>
         </div>
         <div>
           <button class="btn btn-light mega" type="submit">Send message</button>
